# arkive-sdk

./: .gitignore  Cargo.toml  README.md
arkive-cli/: Cargo.toml  README.md
arkive-cli/src/: config.rs  main.rs
arkive-cli/src/commands/: ark.rs  backup.rs  balance.rs  mod.rs  sync.rs  transaction.rs  wallet.rs
arkive-core/: Cargo.toml
arkive-core/examples/: basic_usage.rs
arkive-core/src/: error.rs  lib.rs  types.rs
arkive-core/src/ark/: mod.rs
arkive-core/src/backup/: encryption.rs  mod.rs
arkive-core/src/bitcoin/: mod.rs
arkive-core/src/storage/: boarding_store.rs  mod.rs  vtxo_store.rs  wallet_store.rs
arkive-core/src/sync/: mod.rs
arkive-core/src/wallet/: config.rs  instance.rs  manager.rs  mod.rs
arkive-lottery/: Cargo.toml
arkive-lottery/src/: error.rs  game.rs  lib.rs  player.rs
arkive-lottery/src/commitment/: mod.rs  scheme.rs
coinflip-cli/: Cargo.toml
coinflip-cli/src/: main.rs
coinflip-cli/src/commands/: mod.rs
