[package]
name = "arkive-core"
version = "0.1.0"
edition = "2021"
description = "Core ARKive SDK for Bitcoin and Ark protocol operations"
authors = ["Dikshant <dikshant.073@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# workspace dependencies
ark-client = { workspace = true }
ark-core = { workspace = true }
ark-bdk-wallet = { workspace = true }
ark-grpc = { workspace = true }

bitcoin = { workspace = true }
bip39 = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
esplora-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# additional dependencies
async-trait = "0.1.88"
futures = "0.3.31"
rand = "0.9.1"
tempfile = "3.20.0"

# Encryption
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.20.0"
tracing-subscriber = "0.3.19"